Update tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,8 +9,34 @@ bind C-space select-pane -t :.+
 # renumber windows upon closing
 set -g renumber-windows on
 
+# screen mode
+set -g default-terminal "screen-256color"
+
 # Use vim keybindings
 setw -g mode-keys vi
+set -g status-keys vi
+setw -g utf8 on
+# use mouse in copy mode
+setw -g mode-mouse on
+
+# status line
+set -g status-utf8 on
+set -g status-justify left
+set -g status-bg colour2
+set -g status-fg colour0
+set -g status-interval 2
+
+set -g status-left-length 32
+set -g status-right-length 150
+
+set -g pane-border-fg colour255
+set -g pane-active-border-fg colour2
+
+set -g status-right "#(date +\"%c\")"
+set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(hostname -s) #[fg=colour238,bg=colour2,nobold]⮀'
+
+set -g window-status-format "#[fg=colour0, bg=colour2] #I #W "
+set -g window-status-current-format "#[fg=colour2,bg=colour252]⮀#[fg=colour232,bg=colour252,noreverse] #I #W #[fg=colour252,bg=colour2,nobold]⮀"
 
 # reload tmux config
 unbind r
