--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -40,7 +40,7 @@
         ui = true
 [core]
         excludesfile = ~/.gitignore_global
-	editor = vim
+        editor = vim
 [apply]
         whitespace = nowarn
 [mergetool]
@@ -52,4 +52,4 @@
         # for more information on different options of the below setting.
         #
         # Setting to git 2.0 default to surpress warning message
-        default = simple
+        default = current
