--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,8 +4,8 @@
 [hub]
         protocol = https
 [user]
-        name = Chris Seto
-        email = chriskseto@gmail.com
+        name = Fabian von Feilitzsch
+        email = fabian@fabianism.us
 [credential]
         helper = osxkeychain
 [alias]
@@ -40,7 +40,7 @@
         ui = true
 [core]
         excludesfile = ~/.gitignore_global
-	editor = vim
+        editor = vim
 [apply]
         whitespace = nowarn
 [mergetool]
