fix mouse mode for new tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,7 @@ bind C-space select-pane -t :.+
 set -g renumber-windows on
 
 # Use vim keybindings
-setw -g mode-keys vi
+# setw -g mode-keys vi
 
 # reload tmux config
 unbind r
@@ -66,20 +66,14 @@ bind + select-layout main-horizontal
 ############
 
 # Toggle mouse on
+unbind m
 bind m \
-    set -g mode-mouse on \;\
-    set -g mouse-resize-pane on \;\
-    set -g mouse-select-pane on \;\
-    set -g mouse-select-window on \;\
+    set-option -g -q mouse on \;\
+    bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M" \;\
+    bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M" \;\
+    bind-key -t vi-copy WheelUpPane halfpage-up \;\
+    bind-key -t vi-copy WheelDownPane halfpage-down \;\
     display 'Mouse: ON'
-
-# Toggle mouse off
-bind M \
-    set -g mode-mouse off \;\
-    set -g mouse-resize-pane off \;\
-    set -g mouse-select-pane off \;\
-    set -g mouse-select-window off \;\
-    display 'Mouse: OFF'
 
 # Navigate panes
 ################
