--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -157,10 +157,10 @@ bind tab choose-window
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Make vim yanking work with OSX system clipboard
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Remove lag from esc + key -> alt code
 # IE make neovim usable
