--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -94,6 +94,8 @@ bind + select-layout main-horizontal
 # Toggle mouse on
 unbind m
 bind m \
+    set -g mode mouse on
+    set -g mouse-select-pane on
     set-option -g -q mouse on \;\
     bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M" \;\
     bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M" \;\
