Make copy paste to system clipboard work on fedora

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -159,9 +159,10 @@ bind tab choose-window
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
-# Make vim yanking work with OSX system clipboard
+# Uncomment for OSX compatibility
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Remove lag from esc + key -> alt code
