--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "zsh/.zprezto"]
 	path = zsh/.zprezto
 	url = https://github.com/sorin-ionescu/prezto
-[submodule "vim/.vim/bundle/Vundle.vim"]
-	path = vim/.vim/bundle/Vundle.vim
-	url = https://github.com/gmarik/Vundle.vim.git
 [submodule "vim/.vim/autoload"]
 	path = vim/.vim/autoload
+	url = https://github.com/junegunn/vim-plug
+[submodule "nvim/.config/nvim/autoload"]
+	path = nvim/.config/nvim/autoload
 	url = https://github.com/junegunn/vim-plug
