Update Tmux mouse mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,8 +16,6 @@ set -g default-terminal "screen-256color"
 setw -g mode-keys vi
 set -g status-keys vi
 setw -g utf8 on
-# use mouse in copy mode
-setw -g mode-mouse on
 
 # status line
 set -g status-utf8 on
@@ -93,19 +91,13 @@ bind + select-layout main-horizontal
 
 # Toggle mouse on
 bind m \
-    set -g mode-mouse on \;\
-    set -g mouse-resize-pane on \;\
-    set -g mouse-select-pane on \;\
-    set -g mouse-select-window on \;\
+    set -g mouse on \;\
     display 'Mouse: ON'
 
 # Toggle mouse off
 bind M \
-    set -g mode-mouse off \;\
-    set -g mouse-resize-pane off \;\
-    set -g mouse-select-pane off \;\
-    set -g mouse-select-window off \;\
-    display 'Mouse: OFF'
+    set -g mouse off \;\
+    display 'Mouse: ON'
 
 # Navigate panes
 ################
