--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -41,7 +41,7 @@
         ui = true
 [core]
         excludesfile = ~/.gitignore_global
-        editor = vim
+        editor = nvim
 [apply]
         whitespace = nowarn
 [mergetool]
