--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,7 +15,6 @@ set -g default-terminal "screen-256color"
 # Use vim keybindings
 setw -g mode-keys vi
 set -g status-keys vi
-setw -g utf8 on
 
 # status line
 set -g status-utf8 on
@@ -31,10 +30,10 @@ set -g pane-border-fg colour255
 set -g pane-active-border-fg colour2
 
 set -g status-right "#(date +\"%c\")"
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(hostname -s) #[fg=colour238,bg=colour2,nobold]⮀'
+set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]#[fg=colour245,bg=colour238,bold] #(hostname -s) #[fg=colour238,bg=colour2,nobold]'
 
 set -g window-status-format "#[fg=colour0, bg=colour2] #I #W "
-set -g window-status-current-format "#[fg=colour2,bg=colour252]⮀#[fg=colour232,bg=colour252,noreverse] #I #W #[fg=colour252,bg=colour2,nobold]⮀"
+set -g window-status-current-format "#[fg=colour2,bg=colour252]#[fg=colour232,bg=colour252,noreverse] #I #W #[fg=colour252,bg=colour2,nobold]"
 
 # reload tmux config
 unbind r
@@ -109,14 +108,15 @@ bind C-space select-pane -t :.+
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -v -c "#{pane_current_path}"
 
-# smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind C-l send-keys 'C-l'
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Cycle through windows
 bind l select-window -t :+
