update mouse mode commands

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,12 +15,12 @@ set -g default-terminal "screen-256color"
 # Use vim keybindings
 setw -g mode-keys vi
 set -g status-keys vi
-setw -g utf8 on
+# setw -g utf8 on
 # use mouse in copy mode
-setw -g mode-mouse on
+setw -g mouse on
 
 # status line
-set -g status-utf8 on
+# set -g status-utf8 on
 set -g status-justify left
 set -g status-bg colour2
 set -g status-fg colour0
@@ -94,14 +94,16 @@ bind + select-layout main-horizontal
 # Toggle mouse on
 unbind m
 bind m \
-    set -g mode mouse on
-    set -g mouse-select-pane on
-    set-option -g -q mouse on \;\
-    bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M" \;\
-    bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M" \;\
-    bind-key -t vi-copy WheelUpPane halfpage-up \;\
-    bind-key -t vi-copy WheelDownPane halfpage-down \;\
-    display 'Mouse: ON'
+    set -g mouse on
+    # set -g set-clipboard off
+    # set -g mouse-utf8 on
+    # set -g select-pane on
+    # set-option -g -q mouse on \;\
+    # bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M" \;\
+    # bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M" \;\
+    # bind-key -t vi-copy WheelUpPane halfpage-up \;\
+    # bind-key -t vi-copy WheelDownPane halfpage-down \;\
+    # display 'Mouse: ON'
 
 # Navigate panes
 ################
