--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,19 +9,33 @@ bind C-space select-pane -t :.+
 # renumber windows upon closing
 set -g renumber-windows on
 
-# screen mode
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+# set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color-italic"
+# set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Use vim keybindings
 setw -g mode-keys vi
 set -g status-keys vi
 
+# set -g status-utf8 on     (tmux < 2.2)
+setw -q -g utf8 on
+
+set -g history-limit 5000  # More scrollback
+
 # status line
-set -g status-utf8 on
 set -g status-justify left
 set -g status-bg colour2
 set -g status-fg colour0
-set -g status-interval 2
+set -g status-interval 5
+
+# https://stelfox.net/blog/2014/03/preventing-tmux-lockups/
+setw -g c0-change-interval 50
+setw -g c0-change-trigger  75
+
+set -g display-panes-time 800 # slightly longer pane indicators display time
+set -g display-time 1000      # slightly longer status messages display time
 
 set -g status-left-length 32
 set -g status-right-length 150
