--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -168,8 +168,8 @@ bind tab choose-window
 ###############################
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Make vim yanking work with OSX system clipboard
 set-option -g default-command "reattach-to-user-namespace -l zsh"
