--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -170,3 +170,11 @@ bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 # Remove lag from esc + key -> alt code
 # IE make neovim usable
 set -sg escape-time 0
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
