--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,8 +29,8 @@ set -g status-interval 2
 set -g status-left-length 32
 set -g status-right-length 150
 
-set -g pane-border-fg colour255
-set -g pane-active-border-fg colour2
+# set -g pane-border-fg colour255
+# set -g pane-active-border-fg colour2
 
 set -g status-right "#(date +\"%c\")"
 set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(hostname -s) #[fg=colour238,bg=colour2,nobold]⮀'
