Update tmux config to v3.2

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,17 +9,18 @@ bind C-space select-pane -t :.+
 # renumber windows upon closing
 set -g renumber-windows on
 
-set -g default-terminal "tmux-256color"
-# set -g default-terminal "xterm-256color"
-# set -g default-terminal "xterm-256color-italic"
-# set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
-set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+# Neovim's :checkhealth has recommended these things to me.
+set -g focus-events on
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+# Remove lag from esc + key -> alt code
+# IE make neovim usable
+set -sg escape-time 0
 
 # Use vim keybindings
 setw -g mode-keys vi
 set -g status-keys vi
 
-# set -g status-utf8 on     (tmux < 2.2)
 setw -q -g utf8 on
 
 set -g history-limit 5000  # More scrollback
@@ -30,18 +31,11 @@ set -g status-bg colour2
 set -g status-fg colour0
 set -g status-interval 5
 
-# https://stelfox.net/blog/2014/03/preventing-tmux-lockups/
-setw -g c0-change-interval 50
-setw -g c0-change-trigger  75
-
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
 set -g status-left-length 32
 set -g status-right-length 150
-
-set -g pane-border-fg colour255
-set -g pane-active-border-fg colour2
 
 set -g status-right "#(date +\"%c\")"
 set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]#[fg=colour245,bg=colour238,bold] #(hostname -s) #[fg=colour238,bg=colour2,nobold]'
@@ -130,16 +124,11 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Cycle through windows
 bind l select-window -t :+
 bind h select-window -t :-
-
-# bind -n C-n select-window -t :+
-# bind -n C-p select-window -t :-
-#bind-key -n C-Right select-window -t :+
-#bind-key -n C-Left select-window -t :-
 
 # Closing panes, windows and sessions
 #####################################
@@ -171,9 +160,3 @@ bind tab choose-window
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# Make vim yanking work with OSX system clipboard
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# Remove lag from esc + key -> alt code
-# IE make neovim usable
-set -sg escape-time 0
