--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,28 +12,12 @@
         st = status
         co = checkout
         ci = commit
-        br = branch
         df = diff
         dfs = diff --staged
+        br = branch --sort=-committerdate
         logg = log --graph --decorate --oneline --abbrev-commit --all
-        pup = pull upstream
-        shorg = push -u origin
-        switch = !legit switch \"$@\"
-        branches = !legit branches
-        sprout = !legit sprout \"$@\"
-        unpublish = !legit unpublish \"$@\"
-        harvest = !legit harvest \"$@\"
-        sync = !legit sync \"$@\"
-        publish = !legit publish \"$@\"
-        graft = !legit graft \"$@\"
-        f = flow
-        pl = pull
-        nuke = delete-branch
-        fublish = flow feature publish
-        fart = flow feature start
-        fix = flow hotfix start
         unstage = reset HEAD --
-        mylog = log --first-parent --no-merges
+        pr-msg = log HEAD...upstream/master --pretty=format:"**%s**%n%b"
 [color]
         diff = auto
         status = auto
@@ -54,3 +38,13 @@
         #
         # Setting to git 2.0 default to surpress warning message
         default = current
+[pull]
+	ff = only
+
+[init]
+	defaultBranch = master
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
