Further into nix land

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,3 @@
-# Sample gitconfig
-#
-
 [hub]
         protocol = https
 [user]
@@ -9,6 +6,7 @@
 [credential]
         helper = osxkeychain
 [alias]
+        m = machete
         st = status
         co = checkout
         ci = commit
@@ -43,8 +41,3 @@
 
 [init]
 	defaultBranch = master
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
