tmux and nvim upgrades

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,11 +7,10 @@ set -g prefix C-space
 set -s escape-time 0
 # Pass focus events to applications so they can resize/repaint.
 set -g focus-events on
-# Upgrade to $TERM to support true colors.
-set -s default-terminal 'screen-256color'
-# TODO what does/did this do?
-# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
-set-option -sa terminal-overrides ',alacritty:RGB'
+# Upgrade to $TERM to support true colors and italics.
+set -s default-terminal 'tmux-256color'
+# Enable truecolor support when inside tmux.
+set -as terminal-features ",xterm-256color:RGB"
 
 # Always enable Mouse Support.
 set -g mouse on
@@ -29,6 +28,23 @@ if-shell -b '[ $(uname) = "Darwin" ]' {
   set default-command "reattach-to-user-namespace -l $SHELL"
 }
 
+# Status Bar configurations.
+set -g status-interval 5
+set -g status-position top
+
+set -g status-right "#[fg=cyan,bg=green]#[default] %a %b %d %Y %H:%M %Z "
+set -g status-right-style "fg=black,bg=cyan"
+set -g status-right-length 80
+
+set -g status-left " #(hostname -s) #[fg=cyan,bg=green]"
+set -g status-left-style "fg=black,bg=cyan"
+set -g status-left-length 80
+
+set -g status-justify centre
+set -g status-style "fg=black,bg=green"
+set -g window-status-format " #I #W "
+set -g window-status-current-format "#[fg=colour232,bg=colour252,noreverse] #I #W "
+
 ########################################################################
 # Below this line are old/legacy values that have been around forever. #
 # Some things may be wrong, invalid or unused.                         #
@@ -44,27 +60,9 @@ set -g renumber-windows on
 # Use vim keybindings
 setw -g mode-keys vi
 set -g status-keys vi
-
-# status line
-set -g status-justify left
-set -g status-bg colour2
-set -g status-fg colour0
-set -g status-interval 5
-
-set -g status-left-length 32
-set -g status-right-length 150
-
-set -g status-right "#(date +\"%c\")"
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]#[fg=colour245,bg=colour238,bold] #(hostname -s) #[fg=colour238,bg=colour2,nobold]'
-
-set -g window-status-format "#[fg=colour0, bg=colour2] #I #W "
-set -g window-status-current-format "#[fg=colour2,bg=colour252]#[fg=colour232,bg=colour252,noreverse] #I #W #[fg=colour252,bg=colour2,nobold]"
-
-# reload tmux config
-unbind r
-bind r \
-    source-file ~/.config/tmux.conf \;\
-    display 'Reloaded tmux config.'
+# Setup 'v' to begin selection as in Vim
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
 
 # create windows and panes in current directory
 unbind '"'
@@ -156,13 +154,6 @@ bind C-q confirm kill-server
 ######################################
 
 bind tab choose-window
-
-# Make copy-n-paste work on OSX
-###############################
-
-# Setup 'v' to begin selection as in Vim
-# bind-key -T copy-mode-vi v send -X begin-selection
-# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # https://www.freecodecamp.org/news/tmux-in-practice-local-and-nested-remote-tmux-sessions-4f7ba5db8795/
 # https://github.com/samoshkin/tmux-config/blob/master/tmux/tmux.conf
