--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -45,6 +45,69 @@ set -g status-style "fg=black,bg=green"
 set -g window-status-format " #I #W "
 set -g window-status-current-format "#[fg=colour232,bg=colour252,noreverse] #I #W "
 
+unbind r
+bind r {
+  source-file ~/.config/tmux/tmux.conf
+  display "Config reloaded"
+}
+
+# Pass through certain environment variables to help with SSH agent forwarding
+# and tmux nesting.
+set -g update-environment \
+  "SSH_ASKPASS\
+  SSH_AUTH_SOCK\
+  SSH_AGENT_PID\
+  SSH_CONNECTION\
+  SSH_TTY\
+  TMUX_IN_TMUX"
+
+## Tmux Nesting.
+# The approach below was adapted from the following resources:
+# https://www.freecodecamp.org/news/tmux-in-practice-local-and-nested-remote-tmux-sessions-4f7ba5db8795/
+# https://github.com/samoshkin/tmux-config/blob/master/tmux/tmux.conf
+# See Also toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
+#
+# Rather than having to jump over hoops and/or remember specific key bindings
+# when running in a nested tmux configuration, we bind a non-prefixed hotkey
+# that disables all hotkeys on the outer tmux session with the exception of the
+# hotkey to re-enable all hotkeys. When the outer session is disabled, we'll
+# provide some visual feedback to indicate as much.
+
+# TODO make this trigger within SSH sessions as well. That might be weird if I
+# ever run TMUX on a remote machine without first being in tmux but I'll worry
+# about that when I get there.
+if-shell '[[ "$TMUX_IN_TMUX" == "1" ]]' {
+  # When we're in a nested tmux, drop the bar onto the bottom and disable the clock widget.
+  set -g status-position bottom
+  set -g status-right "#[fg=cyan,bg=green]#[default]                      "
+}
+
+bind -T root F12 {
+  # Step 1: Disable the listening of key bindings on the "outer" tmux.
+  set prefix None
+  set key-table off
+  
+  # Step 2: Provide some visual feedback that the "outer" tmux is no longer
+  # listening for key bindings with the exception of the below one.
+  # In this case, set the title bar to a dull color and disable the clock widget.
+  set status-style "fg=black,bg=grey"
+  
+  # Step 3: Refresh the client.
+  refresh-client -S
+}
+
+bind -T off F12 {
+  # Step 1: Re-enable out listening of all key bindings.
+  set -u prefix
+  set -u key-table
+
+  # Step 2: Remove out visual feedback indicators.
+  set -u status-style
+
+  # Step 3: Refresh the client.
+  refresh-client -S
+}
+
 ########################################################################
 # Below this line are old/legacy values that have been around forever. #
 # Some things may be wrong, invalid or unused.                         #
@@ -154,30 +217,3 @@ bind C-q confirm kill-server
 ######################################
 
 bind tab choose-window
-
-# https://www.freecodecamp.org/news/tmux-in-practice-local-and-nested-remote-tmux-sessions-4f7ba5db8795/
-# https://github.com/samoshkin/tmux-config/blob/master/tmux/tmux.conf
-# We want to have single prefix key "C-a", usable both for local and remote session
-# we don't want to "C-a" + "a" approach either
-# Idea is to turn off all key bindings and prefix handling on local session,
-# so that all keystrokes are passed to inner/remote session
-
-# see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
-
-# Also, change some visual styles when window keys are off
-# bind -T root F12  \
-#     set prefix None \;\
-#     set key-table off \;\
-#     set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;\
-#     set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
-#     set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
-#     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-#     refresh-client -S \;\
-# 
-# bind -T off F12 \
-#   set -u prefix \;\
-#   set -u key-table \;\
-#   set -u status-style \;\
-#   set -u window-status-current-style \;\
-#   set -u window-status-current-format \;\
-#   refresh-client -S
