--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,7 +10,8 @@ set -g focus-events on
 # Upgrade to $TERM to support true colors and italics.
 set -s default-terminal 'tmux-256color'
 # Enable truecolor support when inside tmux.
-set -as terminal-features ",xterm-256color:RGB"
+set -as terminal-features ",$TERM:RGB"
+# set -as terminal-features ",xterm-256color:RGB"
 
 # Always enable Mouse Support.
 set -g mouse on
