configure copy paste to work in nested sessions

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,10 +11,14 @@ set -g focus-events on
 set -s default-terminal 'tmux-256color'
 # Enable truecolor support when inside tmux.
 set -as terminal-features ",$TERM:RGB"
-# set -as terminal-features ",xterm-256color:RGB"
 
 # Always enable Mouse Support.
 set -g mouse on
+
+# Configure clipboard access.
+# See also https://github.com/tmux/tmux/wiki/Clipboard#quick-summary
+set -s set-clipboard external
+set -as terminal-features ",$TERM:clipboard"
 
 # Increase the default scrollback buffer of 2k to 50k.
 set -g history-limit 50000
@@ -126,7 +130,7 @@ setw -g mode-keys vi
 set -g status-keys vi
 # Setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel
 
 # create windows and panes in current directory
 unbind '"'
