Activate nested mode when in an SSH session

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -78,10 +78,9 @@ set -g update-environment \
 # hotkey to re-enable all hotkeys. When the outer session is disabled, we'll
 # provide some visual feedback to indicate as much.
 
-# TODO make this trigger within SSH sessions as well. That might be weird if I
-# ever run TMUX on a remote machine without first being in tmux but I'll worry
-# about that when I get there.
-if-shell '[[ "$TMUX_IN_TMUX" == "1" ]]' {
+# That might be weird if I ever run TMUX on a remote machine without first
+# being in tmux but I'll worry about that when I get there.
+if-shell '[ "$TMUX_IN_TMUX" == "1" ] || [ -n "$SSH_AUTH_SOCK" ]' {
   # When we're in a nested tmux, drop the bar onto the bottom and disable the clock widget.
   set -g status-position bottom
   set -g status-right "#[fg=cyan,bg=green]#[default]                      "
