fix ssh detection

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -80,7 +80,7 @@ set -g update-environment \
 
 # That might be weird if I ever run TMUX on a remote machine without first
 # being in tmux but I'll worry about that when I get there.
-if-shell '[ "$TMUX_IN_TMUX" == "1" ] || [ -n "$SSH_AUTH_SOCK" ]' {
+if-shell '[ "$TMUX_IN_TMUX" == "1" ] || [ -n "$SSH_CONNECTION" ]' {
   # When we're in a nested tmux, drop the bar onto the bottom and disable the clock widget.
   set -g status-position bottom
   set -g status-right "#[fg=cyan,bg=green]#[default]                      "
