Fix tmux copy paste across SSH

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ set -g mouse on
 
 # Configure clipboard access.
 # See also https://github.com/tmux/tmux/wiki/Clipboard#quick-summary
-set -s set-clipboard external
+set -s set-clipboard on
 set -as terminal-features ",$TERM:clipboard"
 
 # Increase the default scrollback buffer of 2k to 50k.
@@ -84,6 +84,8 @@ if-shell '[ "$TMUX_IN_TMUX" == "1" ] || [ -n "$SSH_CONNECTION" ]' {
   # When we're in a nested tmux, drop the bar onto the bottom and disable the clock widget.
   set -g status-position bottom
   set -g status-right "#[fg=cyan,bg=green]#[default]                      "
+  # https://github.com/tmux/tmux/wiki/Clipboard#terminal-support---tmux-inside-tmux
+  set -s set-clipboard external
 }
 
 bind -T root F12 {
