Fix copy paste from vim in nested tmux sessions

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,6 +17,8 @@ set -g mouse on
 
 # Configure clipboard access.
 # See also https://github.com/tmux/tmux/wiki/Clipboard#quick-summary
+# NOTE: 'on' allow tmux and applications within tmux to set the clipboard.
+# 'external' only allows tmux to set the clipboard.
 set -s set-clipboard on
 set -as terminal-features ",$TERM:clipboard"
 
@@ -84,8 +86,6 @@ if-shell '[ "$TMUX_IN_TMUX" == "1" ] || [ -n "$SSH_CONNECTION" ]' {
   # When we're in a nested tmux, drop the bar onto the bottom and disable the clock widget.
   set -g status-position bottom
   set -g status-right "#[fg=cyan,bg=green]#[default]                      "
-  # https://github.com/tmux/tmux/wiki/Clipboard#terminal-support---tmux-inside-tmux
-  set -s set-clipboard external
 }
 
 bind -T root F12 {
