Assume that all terminal emulators will have modern features

--- a/assets/tmux/tmux.conf
+++ b/assets/tmux/tmux.conf
@@ -10,7 +10,7 @@ set -g focus-events on
 # Upgrade to $TERM to support true colors and italics.
 set -s default-terminal 'tmux-256color'
 # Enable truecolor support when inside tmux.
-set -as terminal-features ",$TERM:RGB"
+set -as terminal-features ",*:RGB"
 
 # Always enable Mouse Support.
 set -g mouse on
@@ -20,7 +20,7 @@ set -g mouse on
 # NOTE: 'on' allow tmux and applications within tmux to set the clipboard.
 # 'external' only allows tmux to set the clipboard.
 set -s set-clipboard on
-set -as terminal-features ",$TERM:clipboard"
+set -as terminal-features ",*:clipboard"
 
 # Increase the default scrollback buffer of 2k to 50k.
 set -g history-limit 50000
